# djangoWebsite

./: README.md  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
trails/: admin.py  apps.py  models.py  urls.py  views.py
trails/templates/registration/: login.html
trails/templates/trails/: addTrail.html  binocs.html  home.html  information.html  newTrails.html  notRemovedTrails.html  removeTrail.html  removedTrails.html  trails.html  visual.html
